--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,7 @@ install_requires =
 python_requires = >=3.6
 package_dir = =src
 zip_safe = no
+
+[options.extras_require]
+testing = 
+    pytest>=8.0
