--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,15 +1,19 @@
 name: Tests
 
-on:
-  - push
-  - pull_request
+on: [push]
 
 jobs:
   test:
+    runs-on: windows-latest
+
     steps:
     - uses: actions/checkout@v2
-      uses: actions/setup-python@v2
+    - name: set up python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.x'
+      
     - name: install dependencies
-      run:
-        python -m pip install --upgrade pip
-        
+      run: python -m pip install --upgrade 
+    - name: install requirements
+      run: pip install -r ./requirements_dev.txt
