--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,6 @@ jobs:
         python-version: '3.x'
       
     - name: install dependencies
-      run: python -m pip install --upgrade 
-    - name: install requirements
-      run: pip install -r ./requirements_dev.txt
+      run: |
+        pip install --upgrade pip
+        pip install -r ./requirements_dev.txt
