ahora se llama decision_trees

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = arboles
+name = decision_trees
 description = contiene las clases para entrenar arboles de desicion
 author = grupo 8
 license = MIT
