--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = decision_trees
+version = 1.0
 description = contiene las clases para entrenar arboles de desicion
 author = grupo 8
 license = MIT
