--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,5 +16,6 @@ jobs:
     - name: install dependencies
       run: |
         pip install --upgrade pip
+        pip install -r ./requirements.txt
         pip install -r ./requirements_dev.txt
         pytest
