--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,4 +18,5 @@ jobs:
         pip install --upgrade pip
         pip install -r ./requirements.txt
         pip install -r ./requirements_dev.txt
+        pip install .
         pytest
