--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,4 +19,6 @@ jobs:
         pip install -r ./requirements.txt
         pip install -r ./requirements_dev.txt
         pip install .
+    - name: testing
+      run: |
         pytest
