--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,14 +11,14 @@ jobs:
     - name: set up python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version: '3.12.x'
       
     - name: install dependencies
       run: |
         pip install --upgrade pip
         pip install -r ./requirements.txt
         pip install -r ./requirements_dev.txt
-        pip install .
+        pip install -r .
     - name: testing
       run: |
         pytest
