--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
         pip install --upgrade pip
         pip install -r ./requirements.txt
         pip install -r ./requirements_dev.txt
-        pip install -r .
+        pip install -m .
     - name: testing
       run: |
         pytest
