--- a/setup.cfg
+++ b/setup.cfg
@@ -5,11 +5,9 @@ description = contiene las clases para entrenar arboles de desicion
 author = grupo 8
 license = MIT
 license_file = LICENSE
-plataforms = win32
-classfiers = Programming Languaje :: Python :: 3.12
+classfiers = Programming Languaje :: Python :: 3
 
 [options]
-packages = decision_trees
 install_requires = 
     joblib>=1.4.2
     numpy>=1.26.4
@@ -24,6 +22,7 @@ install_requires =
 
 python_requires = >=3.6
 package_dir = =src
+packages = find:
 zip_safe = no
 
 [options.extras_require]
